<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_ctrl</name>
  <version>0.0.0</version>
  <description>Robot control with messages obtained from unity</description>
  <maintainer email="mankoch@ethz.ch">mankoch</maintainer>
  <license>TODO: License declaration</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>os</exec_depend>
  <exec_depend>unity_robotics_demo_msgs</exec_depend>
  <exec_depend>interbotix_xs_modules</exec_depend>
  <exec_depend>interbotix_xs_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>json</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>argparse</exec_depend>
  <exec_depend>sys</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>custom_ctrl_msgs</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
